--- a/app/views/templates/conversor.html
+++ b/app/views/templates/conversor.html
@@ -14,7 +14,7 @@
           </select>
           
         <div class="form-group">
-            <label for="inicial">Entrada:</label>
+            <label for="inicial">Entrada: {{}}</label>
             <input type="text" class="form-control" id="inicial" name="inicial" required>
         </div>
 
