--- a/app/views/templates/conversor.html
+++ b/app/views/templates/conversor.html
@@ -4,31 +4,32 @@
     <h1>{% block title %} PAGINA DE CONVERSIONES {% endblock %}</h1>
 
 <div class="mt-3">
-    <form method="post">
-        <label> Quiero convertir: </label>
-        <select class="form-group" aria-label="Default select example">
-            <option selected value = "1">Decimal</option>
-            <option value="2">Octal</option>
-            <option value="3">Exadecimal</option>
-            <option value="4">Binario</option>
-          </select>
+    <form action="/conversor" method="post">
+
+        <label for="inicial"> Quiero convertir: </label>
+        <select class="form-group" id="inicial" name="inicial" required>
+            <option value = "decimal">Decimal</option>
+            <option value = "octal">Octal</option>
+            <option value = "hexadecimal">Exadecimal</option>
+            <option value = "binario">Binario</option>
+        </select>
           
         <div class="form-group">
-            <label for="inicial">Entrada: {{}}</label>
-            <input type="text" class="form-control" id="inicial" name="inicial" required>
+            <label for="entrada">Entrada:</label>
+            <input type="text" class="form-control" id="entrada" name="entrada"  value={{result['entrada']}} required>
         </div>
 
-        <label> A: </label>
-        <select class="form-group" aria-label="Default select example">
-            <option selected value = "1">Decimal</option>
-            <option value="2">Octal</option>
-            <option value="3">Exadecimal</option>
-            <option value="4">Binario</option>
+        <label for="final"> A: </label>
+        <select class="form-group" id="final" name="final" required>
+            <option value = "decimal">Decimal</option>
+            <option value = "octal">Octal</option>
+            <option value = "hexadecimal">Exadecimal</option>
+            <option value = "binario">Binario</option>
           </select>
 
         <div class="form-group">
             <label for="respuesta">Respuesta:</label>
-            <input type="text" class="form-control" id="respuesta" name="respuesta" disabled>
+            <input type="text" class="form-control" id="respuesta" name="respuesta" disabled value={{result['salida']}}>
         </div>
         <!-- Otros campos del formulario -->
         <button type="submit" class="btn btn-primary">Enviar</button>
