--- a/app/views/templates/conversor.html
+++ b/app/views/templates/conversor.html
@@ -4,7 +4,7 @@
     <h1>{% block title %} PAGINA DE CONVERSIONES {% endblock %}</h1>
 
 <div class="mt-3">
-    <form action="/conversor" method="post">
+    <form>
 
         <label for="inicial"> Quiero convertir: </label>
         <select class="form-group" id="inicial" name="inicial" required>
@@ -16,7 +16,7 @@
           
         <div class="form-group">
             <label for="entrada">Entrada:</label>
-            <input type="text" class="form-control" id="entrada" name="entrada"  value={{result['entrada']}} required>
+            <input type="text" class="form-control" id="entrada" name="entrada" required pattern="[0-9A-F]{1,5}\.[0-9A-F]{1,2}?" title="XXXXXX.XX">
         </div>
 
         <label for="final"> A: </label>
@@ -29,12 +29,30 @@
 
         <div class="form-group">
             <label for="respuesta">Respuesta:</label>
-            <input type="text" class="form-control" id="respuesta" name="respuesta" disabled value={{result['salida']}}>
+            <input type="text" class="form-control" id="respuesta" name="respuesta" disabled >
         </div>
         <!-- Otros campos del formulario -->
         <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
 </div>
+
+<script>
+
+  $(document).ready(function() {
+     $('form').submit(function(event) {
+        event.preventDefault();
+        $.ajax({
+           type: 'POST',
+           url: '/conversor',
+           data: $('form').serialize(),
+           success: function(ret) {
+              $("#respuesta").val(ret)
+           }
+        });
+     });
+  });
+
+</script>
 
 
 {% endblock %}
