--- a/app/views/templates/conversor.html
+++ b/app/views/templates/conversor.html
@@ -10,7 +10,7 @@
         <select class="form-group" id="inicial" name="inicial" required>
             <option value = "decimal">Decimal</option>
             <option value = "octal">Octal</option>
-            <option value = "hexadecimal">Exadecimal</option>
+            <option value = "hexadecimal">Hexadecimal</option>
             <option value = "binario">Binario</option>
         </select>
           
@@ -23,16 +23,18 @@
         <select class="form-group" id="final" name="final" required>
             <option value = "decimal">Decimal</option>
             <option value = "octal">Octal</option>
-            <option value = "hexadecimal">Exadecimal</option>
+            <option value = "hexadecimal">Hexadecimal</option>
             <option value = "binario">Binario</option>
           </select>
+
+          <button type="submit" class="btn btn-primary">Enviar</button>
 
         <div class="form-group">
             <label for="respuesta">Respuesta:</label>
             <input type="text" class="form-control" id="respuesta" name="respuesta" disabled >
         </div>
         <!-- Otros campos del formulario -->
-        <button type="submit" class="btn btn-primary">Enviar</button>
+        
     </form>
 </div>
 
