--- a/app/views/templates/index.html
+++ b/app/views/templates/index.html
@@ -1,29 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>{% block title %} TESIS JULIANA CASTRO {% endblock %}</h1>
+    <h1>{% block title %} LABORATORIO REMOTO PARA SISTEMAS DIGITALES {% endblock %}</h1>
 
     <div class="px-4 py-5 my-5 text-center">
-        <img class="d-block mx-auto mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-        <h1 class="display-5 fw-bold">Centered hero</h1>
-        <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
-          </div>
-        </div>
-      </div>
+      <h1 class="display-4 fw-bold">BIENVENIDOS</h1>
+        <p class="lead mb-4">Los sistemas digitales son fundamentales en nuestra era tecnológica, ya que forman la base de la mayoría de las tecnologías que utilizamos a diario.  En un sistema digital, la información se representa mediante combinaciones de unos y ceros, conocidos como bits. Estos bits son la unidad básica de almacenamiento y procesamiento de datos en los dispositivos electrónicos. A través de circuitos electrónicos y algoritmos específicos, los sistemas digitales pueden realizar una amplia gama de funciones, desde operaciones matemáticas simples hasta tareas complejas como la reproducción de video en alta definición o el procesamiento de grandes volúmenes de datos.</p>
+        <p class="lead mb-4">Los sistemas digitales se encuentran en todas partes, desde los dispositivos móviles que usamos a diario hasta los sistemas de control en la industria y la medicina. Comprender cómo funcionan estos sistemas es esencial para desarrollar nuevas tecnologías y mejorar las existentes, lo que los convierte en un campo de estudio crucial en la ingeniería electrónica y la informática.</p>    
+  </div>
     
       <div class="b-example-divider"></div>
     
       <div class="px-4 pt-5 my-5 text-center border-bottom">
-        <h1 class="display-4 fw-bold">Centered screenshot</h1>
+        <h1 class="display-4 fw-bold">Numeros Digitales</h1>
         <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+          <p class="lead mb-4">El sistema de números digitales es la base de la computación moderna y se fundamenta en la representación de cantidades mediante dígitos discretos.</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Primary button</button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+            
           </div>
         </div>
         <div class="overflow-hidden" style="max-height: 30vh;">
