--- a/app/views/templates/operaciones_logicas.html
+++ b/app/views/templates/operaciones_logicas.html
@@ -36,8 +36,8 @@
         </div>
         <!-- Otros campos del formulario -->
         <button onclick="enviar()" class="btn btn-primary">Enviar</button>
-        <button onclick="autocompletar()" class="btn btn-primary">Enviar automaticos</button>
-        <button type="button" onclick="mostrarTabla()" class="btn btn-primary">Mostrar Tabla ESP32</button>
+        <button onclick="autocompletar()" class="btn btn-primary">Enviar automatico</button>
+        <button type="button" onclick="mostrarTabla()" class="btn btn-primary">Mostrar Tabla</button>
 
     </form>
 </div>
