--- a/app/views/templates/operaciones_binarias.html
+++ b/app/views/templates/operaciones_binarias.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} PAGINA DE OPERACIONES BINARIAS {% endblock %}</h2>
+    <h1>{% block title %} PAGINA DE OPERACIONES BINARIAS {% endblock %}</h1>
 
+    <h5>La calculadora solo permite numeros binarios es decir numeros que conste de 0 y 1</h5>
 <div class="mt-3">
     <form >
 
