--- a/app/views/templates/operaciones_logicas.html
+++ b/app/views/templates/operaciones_logicas.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>{% block title %} PAGINA DE OPERACIONES LÓGICAS {% endblock %}</h1>
+    <h2>{% block title %} PAGINA DE OPERACIONES LÓGICAS {% endblock %}</h2>
 
     <h5>Ingrese la expresión booleana utilizando solo A, B, C, D y los operadores lógicos (& para AND, | para OR, ~ para NOT, ^ para XOR):  </h5>
 <div class="mt-3">
@@ -102,8 +102,27 @@
            url: '/operaciones_logicas',
            data: $('form').serialize(),
            success: function(ret) {
-              $("#respuesta").val(ret.valor)
+            console.log(ret)
+            if(ret.valor != "Datos incorrectos"){
+                $("#respuesta").val(ret.valor)
               $("#operacion_simplificada").val(ret.simplificada)
+
+            }else {
+                Swal.fire({
+                title: "Error!",
+                text: "Datos incorrectos o error en sintaxis",
+                icon: "error"
+                });
+            }
+              
+            }
+        });
+        $.ajax({
+           type: 'POST',
+           url: '/operaciones_logicas_esp',
+           data: $('form').serialize(),
+           success: function(ret) {
+                console.log(ret)
             }
         });
      });
@@ -121,6 +140,8 @@
   function autocompletar(){
     if(document.getElementById("expression").value == "") document.getElementById("expression").value = 'A & ~B & ~C & ~D | A & ~B & C & ~D';
     
+    cadena = document.getElementById("expression").value;
+
     if(cadena.includes('A') || cadena.includes('a')) $('#A_div').prop('hidden', false)
     if(cadena.includes('B') || cadena.includes('b')) $('#B_div').prop('hidden', false)
     if(cadena.includes('C') || cadena.includes('c')) $('#C_div').prop('hidden', false)
@@ -134,23 +155,39 @@
   }
 
   function mostrarTabla(){
-    contador = 0;
-    letras = [];
 
-    if($('#expression').val().includes('A') || $('#expression').val().includes('a')) {contador += 1; letras[letras.length] = "A"};
-    if($('#expression').val().includes('B') || $('#expression').val().includes('b')) {contador += 1; letras[letras.length] = "B"};
-    if($('#expression').val().includes('C') || $('#expression').val().includes('c')) {contador += 1; letras[letras.length] = "C"};
-    if($('#expression').val().includes('D') || $('#expression').val().includes('d')) {contador += 1; letras[letras.length] = "D"};
+    $.ajax({
+        type: 'POST',
+        url: '/operaciones_logicas',
+        data: $('form').serialize(),
+        success: function(ret) {
+            if(ret.valor != "Datos incorrectos"){
+                contador = 0;
+                letras = [];
 
-    genera_tabla(contador,letras);
-    // if(contador > 0){
-    //     $.ajax({
-    //        type: 'POST',
-    //        url: '/mostrar_tabla?contador='+contador,
-    //        success: function(ret) {
-    //         }
-    //     });
-    // }
+                if($('#expression').val().includes('A') || $('#expression').val().includes('a')) {contador += 1; letras[letras.length] = "A"};
+                if($('#expression').val().includes('B') || $('#expression').val().includes('b')) {contador += 1; letras[letras.length] = "B"};
+                if($('#expression').val().includes('C') || $('#expression').val().includes('c')) {contador += 1; letras[letras.length] = "C"};
+                if($('#expression').val().includes('D') || $('#expression').val().includes('d')) {contador += 1; letras[letras.length] = "D"};
+
+                genera_tabla(contador,letras);
+                if(contador > 0){
+                    $.ajax({
+                        type: 'POST',
+                        url: '/mostrar_tabla?contador='+contador,
+                        success: function(ret) {
+                        }
+                    });
+                }
+            } else {
+                Swal.fire({
+                title: "Error!",
+                text: "Datos incorrectos o error en sintaxis",
+                icon: "error"
+                });
+            }
+       }
+    });
   }
 
   function limpiarRespuesta(){
